Done with the assigment

--- a/Opgave1/Opgave1/Opgave1.csproj
+++ b/Opgave1/Opgave1/Opgave1.csproj
@@ -53,6 +53,9 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.105.1, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SQLite.Core.1.0.105.1\lib\net46\System.Data.SQLite.dll</HintPath>
     </Reference>
@@ -99,6 +102,8 @@
     <Content Include="Main.aspx" />
     <Content Include="Main.css" />
     <Content Include="Persons.aspx" />
+    <Content Include="PersonXML.aspx" />
+    <Content Include="App_Data\PersonXML.xml" />
     <Content Include="Product.aspx" />
     <Content Include="Products.aspx" />
     <Content Include="Web.config">
@@ -106,6 +111,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connections.cs" />
     <Compile Include="Controls\Backbone.ascx.cs">
       <DependentUpon>Backbone.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -144,6 +150,13 @@
     <Compile Include="Persons.aspx.designer.cs">
       <DependentUpon>Persons.aspx</DependentUpon>
     </Compile>
+    <Compile Include="PersonXML.aspx.cs">
+      <DependentUpon>PersonXML.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PersonXML.aspx.designer.cs">
+      <DependentUpon>PersonXML.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Product.aspx.cs">
       <DependentUpon>Product.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -161,7 +174,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
