--- a/Opgave1/Opgave1/packages.config
+++ b/Opgave1/Opgave1/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net462" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net462" developmentDependency="true" />
+  <package id="MySql.Data" version="6.9.9" targetFramework="net462" />
   <package id="System.Data.SQLite" version="1.0.105.1" targetFramework="net462" />
   <package id="System.Data.SQLite.Core" version="1.0.105.1" targetFramework="net462" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.1" targetFramework="net462" />
